--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,8 @@ body {
 .navbar {
     margin-bottom: 0;
     width: 100%;
-    background-color: #f5f2f18c;
+    /* background-color: #f5f2f18c; */
+    background-color: whitesmoke;
     border: 0;
 }
 
@@ -44,18 +45,28 @@ body {
 
 .alert {
     margin-bottom: 0;
+    border-radius: 0;
+    padding: .75rem 1rem;
 }
 
-.alert_container {}
+.alert-container .col-12 {
+    padding-left: 0;
+    padding-right: 0;
+}
 
 .alert-warning {
-    /* margin: 10px 0; */
+    background-color: #e5b829;
+    border: #e5b829;
+    color: whitesmoke;
 }
 
-.sale {
+.alert-warning strong {
+    background-color: #e5b829;
+    border: #e5b829;
     color: red;
-    font-size: 110%;
+    font-weight: 700;
 }
+
 
 .callout_container {
     height: 100vh;
@@ -100,7 +111,8 @@ body {
 }
 
 .jumbotron h1 {
-    color: rgb(250, 235, 215);
+    /* color: rgb(250, 235, 215); */
+    color: whitesmoke;
     margin-top: 90px;
     margin-bottom: 20px;
     font-weight: 700;
@@ -108,13 +120,16 @@ body {
 
 .jumbotron>.lead {
     font-weight: 500;
-    color: rgb(250, 235, 215);
+    /* color: rgb(250, 235, 215); */
+    color: whitesmoke;
+    line-height: 2;
 }
 
 .jumbotron small {
     font-style: italic;
     font-size: 90%;
-    color: rgb(245, 242, 241);
+    /* color: rgb(245, 242, 241); */
+    color: whitesmoke;
 }
 
 /* .text-muted {
