--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600;700;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@100;300;400;500;700;800;900&family=Syne:wght@400;500;600;700;800&display=swap');
 
 body {
@@ -7,7 +6,9 @@ body {
     background-color: #f5f2f18c;
 }
 
-.container-wrapper {}
+.container-wrapper {
+    margin-top: 75px;
+}
 
 .container-wrapper--red {
     background-color: #f05f40;
@@ -225,3 +226,22 @@ body {
 /* Monthly Favourites */
 
 .monthly_favourites_container {}
+
+/* Wine of the Week */
+
+.wotw-content {
+    margin: 20px;
+}
+
+.wotw-heading {
+    padding: 10px;
+}
+
+.wotw-desciption {
+    padding: 10px;
+}
+
+.col-md-5 img {
+    /* padding: 10px; */
+    width: 100%;
+}
